--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -65,7 +65,7 @@
                 <div id="collapse_sidebar">
                 <h1 class="nav-header" >Jimi</h1>
                 <ul  class="sidebar-nav">
-                    <li class="menu-toggle" ><a href="#" id="menu-toggle"><span class="glyphicon glyphicon-menu-hamburger" style="color:black"></span></a></li>
+                    <li class="menu-toggle" ><a href="#" id="menu-toggle"><span class="glyphicon glyphicon-menu-hamburger" style="color:white"></span></a></li>
                 </ul>
                 </div>
             </div>
