--- a/web/static/css/conductEditor.css
+++ b/web/static/css/conductEditor.css
@@ -32,8 +32,8 @@ html, body {
 
 /*flowchart*/
 .flowchart {
-	width: 10000px;
-	height: 10000px;
+	width: 100%;
+	height: 100%;
 	padding: 0;
 	margin: 0;	
 	border-style: solid;
