--- a/web/templates/blank.html
+++ b/web/templates/blank.html
@@ -3,6 +3,8 @@
         
     </head>
     <body>
-        {{ content }}
+        <pre>
+            {{ content }}
+        </pre>
     </body>
 </html>
