Started work on codify

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -30,6 +30,7 @@
                                 </div>
                             </ul>
                         </div>
+                        <a class="btn btn-primary btn-block" role="button" target="content-frame" href="/codify/">Codify</a>
                         <div class="btn-group btn-block sidebar_item">
                             <button type="button" class="btn btn-primary btn-block dropdown-toggle" data-toggle="dropdown">
                                 Administration 
