--- a/web/templates/blank.html
+++ b/web/templates/blank.html
@@ -3,8 +3,6 @@
         
     </head>
     <body>
-        <pre>
-            {{ content }}
-        </pre>
+        <pre>{{ content }}</pre>
     </body>
 </html>
