--- a/web/templates/codify.html
+++ b/web/templates/codify.html
@@ -46,62 +46,25 @@
     });
   });
 
-	(function($) {
-  $.fn.enableSmartTab = function() {
-    var $this;
-    $this = $(this);
-    $this.keydown(function(e) {
-      var after, before, end, lastNewLine, changeLength, re, replace, selection, start, val;
-      if ((e.charCode === 9 || e.keyCode === 9) && !e.altKey && !e.ctrlKey && !e.metaKey) {
-        e.preventDefault();
-        start = this.selectionStart;
-        end = this.selectionEnd;
-        val = $this.val();
-        before = val.substring(0, start);
-        after = val.substring(end);
-        replace = true;
-        if (start !== end) {
-          selection = val.substring(start, end);
-          if (~selection.indexOf('\n')) {
-            replace = false;
-            changeLength = 0;
-            lastNewLine = before.lastIndexOf('\n');
-            if (!~lastNewLine) {
-              selection = before + selection;
-              changeLength = before.length;
-              before = '';
-            } else {
-              selection = before.substring(lastNewLine) + selection;
-              changeLength = before.length - lastNewLine;
-              before = before.substring(0, lastNewLine);
-            }
-            if (e.shiftKey) {
-              re = /(\n|^)(\t|[ ]{1,8})/g;
-              if (selection.match(re)) {
-                start--;
-                changeLength--;
-              }
-              selection = selection.replace(re, '$1');
-            } else {
-              selection = selection.replace(/(\n|^)/g, '$1\t');
-              start++;
-              changeLength++;
-            }
-            $this.val(before + selection + after);
-            this.selectionStart = start;
-            this.selectionEnd = start + selection.length - changeLength;
-          }
-        }
-        if (replace && !e.shiftKey) {
-          $this.val(before + '\t' + after);
-          this.selectionStart = this.selectionEnd = start + 1;
-        }
-      }
-    });
-  };
-})(jQuery);
+  $("textarea").keydown(function(e) {
+    if(e.keyCode === 9) { // tab was pressed
+        // get caret position/selection
+        var start = this.selectionStart;
+            end = this.selectionEnd;
 
-$(function() {
-  $("textarea").enableSmartTab();
-})
+        var $this = $(this);
+
+        // set textarea value to: text before caret + tab + text after caret
+        $this.val($this.val().substring(0, start)
+                    + "\t"
+                    + $this.val().substring(end));
+
+        // put caret at right position again
+        this.selectionStart = this.selectionEnd = start + 1;
+
+        // prevent the focus lose
+        return false;
+    }
+});
+  
 </script>
