Comments and removed demo text

--- a/web/templates/codify.html
+++ b/web/templates/codify.html
@@ -32,7 +32,7 @@
       <textarea id="codeEditor" class="inputFullWidth" style="height: 350px;"></textarea></br>
       <button id="run">Run</button></br>
       Output:<br>
-      <pre id="output">ttt</pre>
+      <pre id="output"></pre>
 		</div>
 		
 	</body>
