--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -74,7 +74,7 @@
             <!-- Page Content -->
             <div id="page-content-wrapper">
                 <div class="container-fluid header-panel">
-                    V{{ version }}, CodeName=First Breath
+                    V{{ version }}, CodeName=Roll Over
                 </div>
                 <div class="container-fluid page-background">
                     <div class="container-fluid page-content">
