bug fixes in codify

--- a/web/templates/codify.html
+++ b/web/templates/codify.html
@@ -29,7 +29,7 @@
       Events:<br>
       <textarea id="events" class="inputFullWidth" style="height: 150px;"></textarea></br>
       Codify Flow:<br>
-      <textarea id="codeEditor" class="inputFullWidth" style="height: 350px;"></textarea></br>
+      <textarea id="codeEditor" class="inputFullWidth" style="height: 350px;" wrap="soft"></textarea></br>
       <button id="run">Run</button></br>
       Output:<br>
       <pre id="output"></pre>
