--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -56,6 +56,7 @@
                                 </div>
                             </ul>
                         </div>
+                        <a class="btn btn-primary btn-block" role="button" target="content-frame" href="/cluster/">Cluster</a>
                         <a class="btn btn-primary btn-block" role="button" target="content-frame" href="/audit/">Audit</a>
                         <a class="btn btn-primary btn-block" role="button" target="content-frame" href="/workers/">Workers</a>
                         <a class="btn btn-primary btn-block" role="button" target="content-frame" href="/myAccount/">My Account</a>
