Added ability to modify webUI ACL in GUI

--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -26,6 +26,7 @@
 		<script src="{{ url_for('static', filename='javascript/alert.js') }}"></script>
 		<script src="{{ url_for('static', filename='javascript/existingObject.js') }}"></script>
 		<script src="{{ url_for('static', filename='javascript/triggerObject.js') }}"></script>
+		<script src="{{ url_for('static', filename='javascript/uiACLProperties.js') }}"></script>
 
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/conductEditor.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/objectProperties.css') }}">
@@ -45,6 +46,8 @@
 					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="triggerFlowObject()">Trigger</a></li>
+					<li class="divider"></li>
+					<li><a tabindex="-1" onclick="editFlowACL()">Modify UI ACL</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="deleteFlowObject()">Delete</a></li>
 				</ul>
