--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -32,6 +32,7 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/objectProperties.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/alert.css') }}">
 
+		<link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
 
 	</head>
 	<body>
@@ -51,7 +52,7 @@
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="deleteFlowObject()">Delete</a></li>
 				</ul>
-				<div class="flowchart" id="flowchart"></div>
+				<div class="flowchart theme-content" id="flowchart"></div>
 			</div>
 		</div>
 	</body>
