--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -24,7 +24,7 @@
 			}
 			.login-form form {
 				margin-bottom: 15px;
-				background: #f7f7f7;
+				background: #0a0a0a;
 				box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 				padding: 30px;
 			}
@@ -34,21 +34,34 @@
 			.form-control, .btn {
 				min-height: 38px;
 				border-radius: 2px;
+				background-color: #0a0a0a;
+				color: white;
+				border-color: #2e6da4;
 			}
 			.btn {        
 				font-size: 15px;
 				font-weight: bold;
 			}
+			.btn:hover {        
+				background-color: #220433;
+			}
 			body {
-				background:#181818;
+				background: #111111;;
+			}
+			.text-center {
+				color: white;
+			}
+			h1 {
+				font-size: 150px;
 			}
 		</style>
 
 	</head>
 	<body>
+		<h1 class="text-center">jimi</h1>
 		<div class="login-form">
 			<form id="loginForm">
-				<h2 class="text-center">Log in</h2>
+				<h2 class="text-center">Please Login</h2>
         		<div class="form-group">
 					<input id="username" type="text" class="form-control" placeholder="Username" required="required" autofocus>
 				</div>
