--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -38,7 +38,7 @@
 	</head>
 	<body>
 		<div class="ui-container">
-			<button onclick="createNewObjectPanel()" class="newModelObject">+</button>
+			<button onclick="createNewObjectPanel()" class="btn btn-primary newModelObject theme-panelButton">+</button>
 			<div class="ui-main">
 				<!-- Right Click Menu -->
 				<ul id="contextMenu" class="dropdown-menu" role="menu" style="display:none" >
