--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -8,18 +8,19 @@
 <script src="{{ url_for('static', filename='includes/bootstrap-3.3.7/js/bootstrap.min.js') }}"></script>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
 
 <html>
     <head>
     <title>JIMI - Backups</title>        
     </head>
-    <body>
-        <a href="/admin/backup-system/" target="blank"><button class='btn btn-default'>Backup System</button></a>
+    <body class="theme-panelContainer">
+        <a href="/admin/backup-system/" target="blank"><button class='btn btn-primary theme-panelButton'>Backup System</button></a>
         <br><br>
         <form enctype="multipart/form-data" action="/admin/restore-system/" method="POST">
             <input type="hidden" value="{{CSRF}}">
-            <input type="file" name="file">
-            <input class='btn btn-default' type="submit" value="Restore System">
+            <input type="file" class="theme-panelContainer" name="file">
+            <input class='btn btn-primary theme-panelButton' type="submit" value="Restore System">
         </form>
     </body>
 </html>
