--- a/web/templates/blank.html
+++ b/web/templates/blank.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        
+        <link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
     </head>
-    <body>
+    <body class="theme-panelContainer">
         <pre>{{ content }}</pre>
     </body>
 </html>
