--- a/web/templates/audit.html
+++ b/web/templates/audit.html
@@ -5,58 +5,64 @@
 <script src="{{ url_for('static', filename='includes/datatables/js/dataTables.bootstrap.js') }}"></script>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='includes/bootstrap-3.3.7/css/bootstrap.min.css') }}">
+<script src="{{ url_for('static', filename='includes/visjs/js/moment.js') }}"></script>
+<script src="{{ url_for('static', filename='includes/datatables/js/datetime.moment.js') }}"></script>
 <script src="{{ url_for('static', filename='includes/bootstrap-3.3.7/js/bootstrap.min.js') }}"></script>
 
 <script src="{{ url_for('static', filename='javascript/helpers.js') }}"></script>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
 
 <html>
     <head>
         <title>JIMI - Audit</title>    
     </head>
-    <body>
-        <table id="orderTable" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-            <thead>
+    <body class="theme-panelContainer">
+        <table id="orderTable" class="table table-sm theme-table" cellspacing="0" width="100%">
+            <thead class="theme-tableHeader">
             </thead>
-            <tbody>
+            <tbody class="theme-tableBody">
             </tbody>
         </table>
     </body>
 </html>
 
 <script>
-        $(document).ready(function () {
-            var tableData = {{ content|tojson }}
-            $('#orderTable').DataTable({
-                "paging" : false,
-                "order" : [[ 0, "desc" ]],
-                "autoWidth": false,
-                columns : [
-                    { "data": "time", "name": "time", "title": "time", "width": "50px", render: $.fn.dataTable.render.text() },
-                    { "data": "source", "name": "source", "title": "source", "width": "50px", render: $.fn.dataTable.render.text() },
-                    { "data": "type", "name": "type", "title": "type", "width": "50px", render: $.fn.dataTable.render.text() },
-                    { "data": "systemID", "name": "systemID", "title": "systemID", "width": "50px", render: $.fn.dataTable.render.text() },
-                    { "title" : "data", "width": "50px", "data": "data", render: function (data, type, row) {
-                            $pre = "<pre>"+syntaxHighlight(data)+"</pre>";
-                            return $pre;
-                        } 
-                    },
-                ],
-                columnDefs: [{
-                    orderable: true
-                }]
-            });
-            $('.dataTables_length').addClass('bs-select');
-            $('.dataTables_filter input[type="search"]').css({'width':'200px'});
-            var table = $('#orderTable').DataTable();
-            for (content in tableData) {
-                systemID = ""
-                if (tableData[content].hasOwnProperty("systemID")) {
-                    systemID = tableData[content]["systemID"]
-                }
-                table.row.add({ "time" : tableData[content]["time"], "source" : tableData[content]["source"], "type" : tableData[content]["type"], "systemID" : systemID, "data" : tableData[content]["data"] })
-            }
-            table.draw();
+    $(document).ready(function () {
+        $.fn.dataTable.moment('DD-MMM-YY HH:mm:ss');
+        var tableData = {{ content|tojson }}
+        $('#orderTable').DataTable({
+            "stripeClasses" : [ 'theme-tableRowOdd', 'theme-tableRowEven' ],
+            "paging" : false,
+            "order" : [[ 0, "desc" ]],
+            "autoWidth": false,
+            columns : [
+                { "data": "time", "name": "time", "title": "time", "width": "50px", render: $.fn.dataTable.render.text() },
+                { "data": "source", "name": "source", "title": "source", "width": "50px", render: $.fn.dataTable.render.text() },
+                { "data": "type", "name": "type", "title": "type", "width": "50px", render: $.fn.dataTable.render.text() },
+                { "data": "systemID", "name": "systemID", "title": "systemID", "width": "50px", render: $.fn.dataTable.render.text() },
+                { "title" : "data", "width": "50px", "data": "data", render: function (data, type, row) {
+                        $pre = '<pre class="theme-json">'+syntaxHighlight(data)+"</pre>";
+                        return $pre;
+                    } 
+                },
+            ],
+            columnDefs: [{
+                orderable: true
+            }]
         });
-    </script>
+        $('.dataTables_length').addClass('bs-select');
+        $('.dataTables_filter input[type="search"]').css({'width':'200px'});
+        $('.dataTables_filter input[type="search"]').addClass("theme-panelTextbox")
+        var table = $('#orderTable').DataTable();
+        for (content in tableData) {
+            systemID = ""
+            if (tableData[content].hasOwnProperty("systemID")) {
+                systemID = tableData[content]["systemID"]
+            }
+            table.row.add({ "time" : tableData[content]["time"], "source" : tableData[content]["source"], "type" : tableData[content]["type"], "systemID" : systemID, "data" : tableData[content]["data"] })
+        }
+        table.draw();
+    });
+</script>
