Added worker output for all cluster members

--- a/web/templates/blank.html
+++ b/web/templates/blank.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
     </head>
     <body class="theme-panelContainer">
-        <pre>{{ content }}</pre>
+        <pre class="theme-panelContainer">{{ content }}</pre>
     </body>
 </html>
