Added ability to export and import conducts (BETA)

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -31,7 +31,7 @@
                                 </div>
                             </ul>
                         </div>
-                        <a class="btn btn-primary btn-block theme-navButton" role="button" target="content-frame" href="/codify/">Codify</a>
+                        <a class="btn btn-primary btn-block theme-navButton" role="button" target="content-frame" href="/codify/">Codify (BETA)</a>
                         <div class="btn-group btn-block sidebar_item">
                             <button type="button" class="btn btn-primary btn-block dropdown-toggle theme-navButton" data-toggle="dropdown">
                                 Administration 
