--- a/web/templates/audit.html
+++ b/web/templates/audit.html
@@ -3,6 +3,8 @@
 
 <link rel="stylesheet" href="{{ url_for('static', filename='includes/datatables/css/dataTables.bootstrap.css') }}">
 <script src="{{ url_for('static', filename='includes/datatables/js/dataTables.bootstrap.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='includes/datatables/css/fixedHeader.dataTables.min.css') }}">
+<script src="{{ url_for('static', filename='includes/datatables/js/dataTables.fixedHeader.min.js') }}"></script>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='includes/bootstrap-3.3.7/css/bootstrap.min.css') }}">
 <script src="{{ url_for('static', filename='includes/visjs/js/moment.js') }}"></script>
@@ -34,6 +36,10 @@
         var tableData = {{ content|tojson }}
         $('#orderTable').DataTable({
             "stripeClasses" : [ 'theme-tableRowOdd', 'theme-tableRowEven' ],
+            fixedHeader: {
+                header: true,
+                footer: true
+            },
             "paging" : false,
             "order" : [[ 0, "desc" ]],
             "autoWidth": false,
